--- a/index.html
+++ b/index.html
@@ -33,199 +33,198 @@
             <p class = " f1 p1 margin1">
                 Reconstruction is the period during which the nation’s laws and Constitution were rewritten and amended to guarantee the basic rights of the former enslaved.  What are the dates of this era?  
             </p>
-            <select name = "Q1" id = "Q11" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
-
-            </select>
+            <input list="answers" name="Q1" id="Q11" class = "f1 p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
 
             <!-- Question 2-->
             <p class = "f1 p1 margin1">2:</p>
             <p class = " f1 p1 margin1">
                 What is the name of the organization created to implement the new changes?
             </p>
-            <select name = "Q2" id = "Q22" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
-
-            </select>
+            <input list="answers" name="Q2" id="Q22" class = "f1 p1 margin2 width1 cent1">
+            <datalist id="answers">
+              <option value = " "> </option>
+              <option value = "A">A</option>
+              <option value = "B">B</option>
+              <option value = "C">C</option>
+              <option value = "D">D</option>
+              <option value = "E">E</option>
+              <option value = "F">F</option>
+              <option value = "G">G</option>
+              <option value = "H">H</option>
+              <option value = "I">I</option>
+              <option value = "J">J</option>
+              <option value = "K">K</option>
+              <option value = "L">L</option>
+            </datalist>
 
             <!-- Question 3-->
             <p class = "f1 p1 margin1">3:</p>
             <p class = " f1 p1 margin1">
                 On Edisto, the Freedmen’s Bureau was headquartered where?
             </p>
-            <select name = "Q3" id = "Q33" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
-
-            </select>
+            <input list="answers" name="Q3" id="Q33" class = "f1 p1 margin2 width1 cent1">
+            <datalist id="answers">
+              <option value = " "> </option>
+              <option value = "A">A</option>
+              <option value = "B">B</option>
+              <option value = "C">C</option>
+              <option value = "D">D</option>
+              <option value = "E">E</option>
+              <option value = "F">F</option>
+              <option value = "G">G</option>
+              <option value = "H">H</option>
+              <option value = "I">I</option>
+              <option value = "J">J</option>
+              <option value = "K">K</option>
+              <option value = "L">L</option>
+            </datalist>
 
             <!-- Question 4-->
             <p class = "f1 p1 margin1">4:</p>
             <p class = " f1 p1 margin1">
                 In 1865, the Bureau’s top priority was to help the freedmen plant enough food crops to sustain themselves through the rest of the year.  What was the staple crop?
             </p>
-            <select name = "Q4" id = "Q44" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
-
-            </select>
+            <input list="answers" name="Q4" id="Q44" class = "f1 p1 margin2 width1 cent1">
+            <datalist id="answers">
+              <option value = " "> </option>
+              <option value = "A">A</option>
+              <option value = "B">B</option>
+              <option value = "C">C</option>
+              <option value = "D">D</option>
+              <option value = "E">E</option>
+              <option value = "F">F</option>
+              <option value = "G">G</option>
+              <option value = "H">H</option>
+              <option value = "I">I</option>
+              <option value = "J">J</option>
+              <option value = "K">K</option>
+              <option value = "L">L</option>
+            </datalist>
 
              <!-- Question 5-->
              <p class = "f1 p1 margin1">5:</p>
              <p class = " f1 p1 margin1">
                 At the beginning of Reconstruction, how many former slaves were living on Edisto Island?
              </p>
-             <select name = "Q5" id = "Q55" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
-                
- 
-             </select>
+             <input list="answers" name="Q5" id="Q55" class = "f1 p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
 
              <!-- Question 6-->
              <p class = "f1 p1 margin1">6:</p>
              <p class = " f1 p1 margin1">
                 After the end of the war, these freedmen were resettled with the promise of land ownership on abandoned plantations.  This land distribution project, ordered by Sherman, was known as what?
              </p>
-             <select name = "Q6" id = "Q66" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
- 
-             </select>
+             <input list="answers" name="Q6" id="Q66" class = "f1 p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
 
              <!-- Question 7-->
              <p class = "f1 p1 margin1">7:</p>
              <p class = " f1 p1 margin1">
                 Which US president revoked the land program? 
              </p>
-             <select name = "Q7" id = "Q77" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
- 
-             </select>
+             <input list="answers" name="Q7" id="Q77" class = "f1 p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
 
              <!-- Question 8 -->
              <p class = "f1 p1 margin1">8:</p>
              <p class = " f1 p1 margin1">
                 The election of what US president signaled the end of the Reconstruction Era? 
              </p>
-             <select name = "Q8" id = "Q88" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
- 
-             </select>
+             <input list="answers" name="Q8" id="Q88" class = "f1 p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
 
              <!-- Question 9 -->
              <p class = "f1 p1 margin1">9:</p>
              <p class = " f1 p1 margin1">
                 At the end of Reconstruction, a White militia company was formed on Edisto that stayed in power for more than 30 years.  What were they called?
              </p>
-             <select name = "Q9" id = "Q99" class = "f1 p1 margin2">
-                <option value = "9"> </option>
-                <option value = "A">A</option>
-                <option value = "B">B</option>
-                <option value = "C">C</option>
-                <option value = "D">D</option>
-                <option value = "E">E</option>
-                <option value = "F">F</option>
-                <option value = "G">G</option>
-                <option value = "H">H</option>
-                <option value = "I">I</option>
-                <option value = "J">J</option>
-                <option value = "K">K</option>
-                <option value = "L">L</option>
- 
-             </select>
+             <input list="answers" name="Q9" id="Q99" class = "f1 p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
 
         </div>
 
