Clean up css file

--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500&display=swap" rel="stylesheet">
 <body>
    <header>
-        <div class = "center">
-            <h1>Reconstruction Era</h1>
-            <h2 class = "h2">Test Your Knowledge</h2>
+        <div id = "div1" class = "bgc3a">
+            <h1 class = "f2 c1a div1Margin1">Reconstruction Era</h1>
+            <h2 class = "f2 c1a div1Margin2">Test Your Knowledge</h2>
         </div>
    </header>
 
-   <div class = "container1">
+   <div id = "div2">
 
-        <div class = "ch1">
-            <h2 class = "h2a">Questions</h2>
+        <div class = "div2Height">
+            <h2 class = "f1 c3a div1Margin2 div2Align">Questions</h2>
         </div>
-        <div class = "ch1">
-            <h2 class = "h2a">Answers</h2>
+        <div class = "div2Height">
+            <h2 class = "f1 c3a div1Margin2 div2Align">Answers</h2>
         </div>
 
 
-        <div class = "quest ch2">
+        <div class = "quest bgc1a borderRadius1 f1">
             <!-- Question 1-->
-            <p class = "f1 p1 margin1">1:</p>
-            <p class = " f1 p1 margin1">
+            <p class = "p1 margin1">1:</p>
+            <p class = "p1 margin1">
                 Reconstruction is the period during which the nation’s laws and Constitution were rewritten and amended to guarantee the basic rights of the former enslaved.  What are the dates of this era?  
             </p>
-            <input list="answers" name="Q1" id="Q11" class = "f1 p1 margin2 width1 cent1">
-             <datalist id="answers">
+            <input list="answers" name="Q1" id="Q11" class = "p1 margin2 width1 cent1">
+             <datalist id="answers"> 
                <option value = " "> </option>
                <option value = "A">A</option>
                <option value = "B">B</option>
@@ -51,11 +51,11 @@
              </datalist>
 
             <!-- Question 2-->
-            <p class = "f1 p1 margin1">2:</p>
-            <p class = " f1 p1 margin1">
+            <p class = "p1 margin1">2:</p>
+            <p class = " p1 margin1">
                 What is the name of the organization created to implement the new changes?
             </p>
-            <input list="answers" name="Q2" id="Q22" class = "f1 p1 margin2 width1 cent1">
+            <input list="answers" name="Q2" id="Q22" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
               <option value = "A">A</option>
@@ -73,11 +73,11 @@
             </datalist>
 
             <!-- Question 3-->
-            <p class = "f1 p1 margin1">3:</p>
-            <p class = " f1 p1 margin1">
+            <p class = "p1 margin1">3:</p>
+            <p class = "p1 margin1">
                 On Edisto, the Freedmen’s Bureau was headquartered where?
             </p>
-            <input list="answers" name="Q3" id="Q33" class = "f1 p1 margin2 width1 cent1">
+            <input list="answers" name="Q3" id="Q33" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
               <option value = "A">A</option>
@@ -95,11 +95,11 @@
             </datalist>
 
             <!-- Question 4-->
-            <p class = "f1 p1 margin1">4:</p>
-            <p class = " f1 p1 margin1">
+            <p class = "p1 margin1">4:</p>
+            <p class = " p1 margin1">
                 In 1865, the Bureau’s top priority was to help the freedmen plant enough food crops to sustain themselves through the rest of the year.  What was the staple crop?
             </p>
-            <input list="answers" name="Q4" id="Q44" class = "f1 p1 margin2 width1 cent1">
+            <input list="answers" name="Q4" id="Q44" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
               <option value = "A">A</option>
@@ -117,11 +117,11 @@
             </datalist>
 
              <!-- Question 5-->
-             <p class = "f1 p1 margin1">5:</p>
-             <p class = " f1 p1 margin1">
+             <p class = "p1 margin1">5:</p>
+             <p class = " p1 margin1">
                 At the beginning of Reconstruction, how many former slaves were living on Edisto Island?
              </p>
-             <input list="answers" name="Q5" id="Q55" class = "f1 p1 margin2 width1 cent1">
+             <input list="answers" name="Q5" id="Q55" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
                <option value = "A">A</option>
@@ -139,11 +139,11 @@
              </datalist>
 
              <!-- Question 6-->
-             <p class = "f1 p1 margin1">6:</p>
-             <p class = " f1 p1 margin1">
+             <p class = "p1 margin1">6:</p>
+             <p class = "p1 margin1">
                 After the end of the war, these freedmen were resettled with the promise of land ownership on abandoned plantations.  This land distribution project, ordered by Sherman, was known as what?
              </p>
-             <input list="answers" name="Q6" id="Q66" class = "f1 p1 margin2 width1 cent1">
+             <input list="answers" name="Q6" id="Q66" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
                <option value = "A">A</option>
@@ -161,11 +161,11 @@
              </datalist>
 
              <!-- Question 7-->
-             <p class = "f1 p1 margin1">7:</p>
-             <p class = " f1 p1 margin1">
+             <p class = "p1 margin1">7:</p>
+             <p class = "p1 margin1">
                 Which US president revoked the land program? 
              </p>
-             <input list="answers" name="Q7" id="Q77" class = "f1 p1 margin2 width1 cent1">
+             <input list="answers" name="Q7" id="Q77" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
                <option value = "A">A</option>
@@ -183,11 +183,11 @@
              </datalist>
 
              <!-- Question 8 -->
-             <p class = "f1 p1 margin1">8:</p>
-             <p class = " f1 p1 margin1">
+             <p class = "p1 margin1">8:</p>
+             <p class = "p1 margin1">
                 The election of what US president signaled the end of the Reconstruction Era? 
              </p>
-             <input list="answers" name="Q8" id="Q88" class = "f1 p1 margin2 width1 cent1">
+             <input list="answers" name="Q8" id="Q88" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
                <option value = "A">A</option>
@@ -205,11 +205,11 @@
              </datalist>
 
              <!-- Question 9 -->
-             <p class = "f1 p1 margin1">9:</p>
-             <p class = " f1 p1 margin1">
+             <p class = "p1 margin1">9:</p>
+             <p class = "p1 margin1">
                 At the end of Reconstruction, a White militia company was formed on Edisto that stayed in power for more than 30 years.  What were they called?
              </p>
-             <input list="answers" name="Q9" id="Q99" class = "f1 p1 margin2 width1 cent1">
+             <input list="answers" name="Q9" id="Q99" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
                <option value = "A">A</option>
@@ -229,76 +229,76 @@
         </div>
 
 
-        <div class = "ans ch2 m1">
+        <div class = "ans bgc1a borderRadius1 m1 f1">
             <!-- Answer A-->
-            <p class = "f1 p1 margin1">A:</p>
-             <p class = " f1 p1 margin1 marright">
+            <p class = "p1 margin1">A:</p>
+            <p class = "p1 margin1 marright">
                 1890-1898
-             </p>
+            </p>
 
              <!-- Answer B-->
-            <p class = "f1 p1 margin1">B:</p>
-            <p class = " f1 p1 margin1 marright">
+            <p class = "p1 margin1">B:</p>
+            <p class = " p1 margin1 marright">
                 Pres. Andrew Johnson
             </p>
 
             <!-- Answer C-->
-            <p class = "f1 p1 margin1">C:</p>
-            <p class = " f1 p1 margin1 marright">
+            <p class = "p1 margin1">C:</p>
+            <p class = " p1 margin1 marright">
                 1865-1877
             </p>
 
             <!-- Answer D-->
-            <p class = "f1 p1 margin1">D:</p>
-            <p class = " f1 p1 margin1 marright">
+            <p class = "p1 margin1">D:</p>
+            <p class = " p1 margin1 marright">
                 The Edisto Mounted Rifles
             </p>
 
             <!-- Answer E-->
-            <p class = "f1 p1 margin1">E:</p>
-            <p class = " f1 p1 margin1 marright">
+            <p class = "p1 margin1">E:</p>
+            <p class = " p1 margin1 marright">
                 10,000
             </p>
 
              <!-- Answer F-->
-             <p class = "f1 p1 margin1">F:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">F:</p>
+             <p class = " p1 margin1 marright">
                 2,500
              </p>
 
              <!-- Answer G-->
-             <p class = "f1 p1 margin1">G:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">G:</p>
+             <p class = " p1 margin1 marright">
                 40 acres and a mule
              </p>
 
              <!-- Answer H-->
-             <p class = "f1 p1 margin1">H:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">H:</p>
+             <p class = "p1 margin1 marright">
                 The Restoration Project
              </p>
 
              <!-- Answer I-->
-             <p class = "f1 p1 margin1">I:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">I:</p>
+             <p class = "p1 margin1 marright">
                 The Freedmen’s Bureau
              </p>
 
              <!-- Answer J-->
-             <p class = "f1 p1 margin1">J:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">J:</p>
+             <p class = "p1 margin1 marright">
                 Corn
              </p>
 
              <!-- Answer K-->
-             <p class = "f1 p1 margin1">K:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">K:</p>
+             <p class = "p1 margin1 marright">
                 Pres. Rutherford B. Hayes
              </p>
 
              <!-- Answer L-->
-             <p class = "f1 p1 margin1">L:</p>
-             <p class = " f1 p1 margin1 marright">
+             <p class = "p1 margin1">L:</p>
+             <p class = "p1 margin1 marright">
                 Seabrook Plantation
              </p>
         </div>
