Clean up css file

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </div>
 
 
-        <div class = "ans bgc1a borderRadius1 m1 f1">
+        <div class = "ans bgc1a borderRadius1 margin3 f1">
             <!-- Answer A-->
             <p class = "p1 margin1">A:</p>
             <p class = "p1 margin1 marright">
