Update font size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
 
-        <div class = "quest bgc1a borderRadius1 f1">
+        <div class = "quest bgc1a borderRadius1 f1 fsize">
             <!-- Question 1-->
             <p class = "p1 margin1">1:</p>
             <p class = "p1 margin1">
@@ -229,7 +229,7 @@
         </div>
 
 
-        <div class = "ans bgc1a borderRadius1 margin3 f1">
+        <div class = "ans bgc1a borderRadius1 margin3 f1 fsize">
             <!-- Answer A-->
             <p class = "p1 margin1">A:</p>
             <p class = "p1 margin1 marright">
