--- a/music.html
+++ b/music.html
@@ -48,9 +48,7 @@
              </datalist>
 
             <!-- Question 2-->
-            <p class = " p1 margin1">
-                Song Snippet 2
-            </p>
+            <button class = "button2 margin1" id = "song2">Click for Song 2</button>
             <input list="answers" name="Q2" id="Q22" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
@@ -69,9 +67,7 @@
             </datalist>
 
             <!-- Question 3-->
-            <p class = "p1 margin1">
-                Song Snippet 3
-            </p>
+            <button class = "button2 margin1" id = "song3">Click for Song 3</button>
             <input list="answers" name="Q3" id="Q33" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
@@ -90,9 +86,7 @@
             </datalist>
 
             <!-- Question 4-->
-            <p class = " p1 margin1">
-                Song Snippet 4
-            </p>
+            <button class = "button2 margin1" id = "song4">Click for Song 4</button>
             <input list="answers" name="Q4" id="Q44" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
@@ -111,9 +105,7 @@
             </datalist>
 
              <!-- Question 5-->
-             <p class = " p1 margin1">
-                Song Snippet 5
-             </p>
+             <button class = "button2 margin1" id = "song5">Click for Song 5</button>
              <input list="answers" name="Q5" id="Q55" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -132,9 +124,7 @@
              </datalist>
 
              <!-- Question 6-->
-             <p class = "p1 margin1">
-                Song Snippet 6
-             </p>
+             <button class = "button2 margin1" id = "song6">Click for Song 6</button>
              <input list="answers" name="Q6" id="Q66" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -153,9 +143,7 @@
              </datalist>
 
              <!-- Question 7-->
-             <p class = "p1 margin1">
-                Song Snippet 7
-             </p>
+             <button class = "button2 margin1" id = "song7">Click for Song 7</button>
              <input list="answers" name="Q7" id="Q77" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -174,9 +162,7 @@
              </datalist>
 
              <!-- Question 8 -->
-             <p class = "p1 margin1">
-                Song Snippet 8 
-             </p>
+             <button class = "button2 margin1" id = "song8">Click for Song 8</button>
              <input list="answers" name="Q8" id="Q88" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -195,9 +181,7 @@
              </datalist>
 
              <!-- Question 9 -->
-             <p class = "p1 margin1">
-                Song Snippet 9
-             </p>
+             <button class = "button2 margin1" id = "song9">Click for Song 9</button>
              <input list="answers" name="Q9" id="Q99" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -312,7 +296,7 @@
         <p id = "textChange" class = "p2">Number Correct: </p>
    </div>
    
-<script src="index.js" charset="utf-8"></script>
+<script src="music.js" charset="utf-8"></script>
     
 </body>
 </html>
