Update music file

--- a/music.html
+++ b/music.html
@@ -30,6 +30,7 @@
         <div class = "quest bgc1a borderRadius1 f1 fsize">
             <!-- Question 1-->
             <button class = "button2 margin1" id = "song1">Click for Song 1</button>
+            <button class = "button2 margin1" id = "song1p">Pause</button>
             <input list="answers" name="Q1" id="Q11" class = "p1 margin2 width1 cent1">
              <datalist id="answers"> 
                <option value = " "> </option>
@@ -49,6 +50,7 @@
 
             <!-- Question 2-->
             <button class = "button2 margin1" id = "song2">Click for Song 2</button>
+            <button class = "button2 margin1" id = "song2p">Pause</button>
             <input list="answers" name="Q2" id="Q22" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
@@ -68,6 +70,7 @@
 
             <!-- Question 3-->
             <button class = "button2 margin1" id = "song3">Click for Song 3</button>
+            <button class = "button2 margin1" id = "song3p">Pause</button>
             <input list="answers" name="Q3" id="Q33" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
@@ -87,6 +90,7 @@
 
             <!-- Question 4-->
             <button class = "button2 margin1" id = "song4">Click for Song 4</button>
+            <button class = "button2 margin1" id = "song4p">Pause</button>
             <input list="answers" name="Q4" id="Q44" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
               <option value = " "> </option>
@@ -106,6 +110,7 @@
 
              <!-- Question 5-->
              <button class = "button2 margin1" id = "song5">Click for Song 5</button>
+             <button class = "button2 margin1" id = "song5p">Pause</button>
              <input list="answers" name="Q5" id="Q55" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -125,6 +130,7 @@
 
              <!-- Question 6-->
              <button class = "button2 margin1" id = "song6">Click for Song 6</button>
+             <button class = "button2 margin1" id = "song6p">Pause</button>
              <input list="answers" name="Q6" id="Q66" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -144,6 +150,7 @@
 
              <!-- Question 7-->
              <button class = "button2 margin1" id = "song7">Click for Song 7</button>
+             <button class = "button2 margin1" id = "song7p">Pause</button>
              <input list="answers" name="Q7" id="Q77" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -163,6 +170,7 @@
 
              <!-- Question 8 -->
              <button class = "button2 margin1" id = "song8">Click for Song 8</button>
+             <button class = "button2 margin1" id = "song8p">Pause</button>
              <input list="answers" name="Q8" id="Q88" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
@@ -182,7 +190,68 @@
 
              <!-- Question 9 -->
              <button class = "button2 margin1" id = "song9">Click for Song 9</button>
+             <button class = "button2 margin1" id = "song9p">Pause</button>
              <input list="answers" name="Q9" id="Q99" class = "p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
+
+             <!-- Question 10 -->
+             <button class = "button2 margin1" id = "song10">Click for Song 10</button>
+             <button class = "button2 margin1" id = "song10p">Pause</button>
+             <input list="answers" name="Q10" id="Q1010" class = "p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
+
+             <!-- Question 11 -->
+             <button class = "button2 margin1" id = "song11">Click for Song 11</button>
+             <button class = "button2 margin1" id = "song11p">Pause</button>
+             <input list="answers" name="Q11" id="Q1111" class = "p1 margin2 width1 cent1">
+             <datalist id="answers">
+               <option value = " "> </option>
+               <option value = "A">A</option>
+               <option value = "B">B</option>
+               <option value = "C">C</option>
+               <option value = "D">D</option>
+               <option value = "E">E</option>
+               <option value = "F">F</option>
+               <option value = "G">G</option>
+               <option value = "H">H</option>
+               <option value = "I">I</option>
+               <option value = "J">J</option>
+               <option value = "K">K</option>
+               <option value = "L">L</option>
+             </datalist>
+
+             <!-- Question 12 -->
+             <button class = "button2 margin1" id = "song12">Click for Song 12</button>
+             <button class = "button2 margin1" id = "song12p">Pause</button>
+             <input list="answers" name="Q12" id="Q1212" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
                <option value = " "> </option>
                <option value = "A">A</option>
