Update music files

--- a/music.html
+++ b/music.html
@@ -29,7 +29,7 @@
 
         <div class = "quest bgc1a borderRadius1 f1 fsize">
             <!-- Question 1-->
-            <button class = "button2 margin1" id = "song1">Click for Song 1</button>
+            <button class = "button2 margin1" id = "song1">Start Song 1</button>
             <button class = "button2 margin1" id = "song1p">Pause</button>
             <input list="answers" name="Q1" id="Q11" class = "p1 margin2 width1 cent1">
              <datalist id="answers"> 
@@ -49,7 +49,7 @@
              </datalist>
 
             <!-- Question 2-->
-            <button class = "button2 margin1" id = "song2">Click for Song 2</button>
+            <button class = "button2 margin1" id = "song2">Start Song 2</button>
             <button class = "button2 margin1" id = "song2p">Pause</button>
             <input list="answers" name="Q2" id="Q22" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
@@ -69,7 +69,7 @@
             </datalist>
 
             <!-- Question 3-->
-            <button class = "button2 margin1" id = "song3">Click for Song 3</button>
+            <button class = "button2 margin1" id = "song3">Start Song 3</button>
             <button class = "button2 margin1" id = "song3p">Pause</button>
             <input list="answers" name="Q3" id="Q33" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
@@ -89,7 +89,7 @@
             </datalist>
 
             <!-- Question 4-->
-            <button class = "button2 margin1" id = "song4">Click for Song 4</button>
+            <button class = "button2 margin1" id = "song4">Start Song 4</button>
             <button class = "button2 margin1" id = "song4p">Pause</button>
             <input list="answers" name="Q4" id="Q44" class = "p1 margin2 width1 cent1">
             <datalist id="answers">
@@ -109,7 +109,7 @@
             </datalist>
 
              <!-- Question 5-->
-             <button class = "button2 margin1" id = "song5">Click for Song 5</button>
+             <button class = "button2 margin1" id = "song5">Start Song 5</button>
              <button class = "button2 margin1" id = "song5p">Pause</button>
              <input list="answers" name="Q5" id="Q55" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -129,7 +129,7 @@
              </datalist>
 
              <!-- Question 6-->
-             <button class = "button2 margin1" id = "song6">Click for Song 6</button>
+             <button class = "button2 margin1" id = "song6">Start Song 6</button>
              <button class = "button2 margin1" id = "song6p">Pause</button>
              <input list="answers" name="Q6" id="Q66" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -149,7 +149,7 @@
              </datalist>
 
              <!-- Question 7-->
-             <button class = "button2 margin1" id = "song7">Click for Song 7</button>
+             <button class = "button2 margin1" id = "song7">Start Song 7</button>
              <button class = "button2 margin1" id = "song7p">Pause</button>
              <input list="answers" name="Q7" id="Q77" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -169,7 +169,7 @@
              </datalist>
 
              <!-- Question 8 -->
-             <button class = "button2 margin1" id = "song8">Click for Song 8</button>
+             <button class = "button2 margin1" id = "song8">Start Song 8</button>
              <button class = "button2 margin1" id = "song8p">Pause</button>
              <input list="answers" name="Q8" id="Q88" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -189,7 +189,7 @@
              </datalist>
 
              <!-- Question 9 -->
-             <button class = "button2 margin1" id = "song9">Click for Song 9</button>
+             <button class = "button2 margin1" id = "song9">Start Song 9</button>
              <button class = "button2 margin1" id = "song9p">Pause</button>
              <input list="answers" name="Q9" id="Q99" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -209,7 +209,7 @@
              </datalist>
 
              <!-- Question 10 -->
-             <button class = "button2 margin1" id = "song10">Click for Song 10</button>
+             <button class = "button2 margin1" id = "song10">Start Song 10</button>
              <button class = "button2 margin1" id = "song10p">Pause</button>
              <input list="answers" name="Q10" id="Q1010" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -229,7 +229,7 @@
              </datalist>
 
              <!-- Question 11 -->
-             <button class = "button2 margin1" id = "song11">Click for Song 11</button>
+             <button class = "button2 margin1" id = "song11">Start Song 11</button>
              <button class = "button2 margin1" id = "song11p">Pause</button>
              <input list="answers" name="Q11" id="Q1111" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
@@ -249,7 +249,7 @@
              </datalist>
 
              <!-- Question 12 -->
-             <button class = "button2 margin1" id = "song12">Click for Song 12</button>
+             <button class = "button2 margin1" id = "song12">Start Song 12</button>
              <button class = "button2 margin1" id = "song12p">Pause</button>
              <input list="answers" name="Q12" id="Q1212" class = "p1 margin2 width1 cent1">
              <datalist id="answers">
