--- a/music.html
+++ b/music.html
@@ -20,10 +20,15 @@
    <div id = "div2">
 
         <div class = "div2Height">
-            <h2 class = "f1 c3a div1Margin2 div2Align">Song Snippet</h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align">Song</h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align"></h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align">Answer</h2>
         </div>
-        <div class = "div2Height">
-            <h2 class = "f1 c3a div1Margin2 div2Align">Artist and Song</h2>
+
+        <div class = "div3Height">
+            <h2 class = "f1 c3a div1Margin2 div2Align"></h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align">Artist</h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align">Song</h2>
         </div>
 
 
