--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
         <button class = "button1" id = "button1">Click to Check Answers</button>
         <button class = "button1 marleft" id = "button2">Click to Start Over</button>
         <p id = "textChange" class = "p2">Number Correct: </p>
+        <button class = "button1 marleft2" id = "button3">Return to Welcome Page</button>
    </div>
    
 <script src="index.js" charset="utf-8"></script>
