--- a/music.html
+++ b/music.html
@@ -369,6 +369,10 @@
         <button class = "button1 marleft" id = "button2">Click to Start Over</button>
         <p id = "textChange" class = "p2">Number Correct: </p>
    </div>
+
+   <div class = "bottom">
+    <button class = "button1" id = "button3">Return to Welcome Page</button>
+   </div>
    
 <script src="music.js" charset="utf-8"></script>
     
