--- a/reconstruction.html
+++ b/reconstruction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="reconstruction.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -315,7 +315,7 @@
     <button class = "button1" id = "button3">Return to Welcome Page</button>
    </div>
    
-<script src="index.js" charset="utf-8"></script>
+<script src="reconstruction.js" charset="utf-8"></script>
     
 </body>
 </html>
