Update pop up windows

--- a/music.html
+++ b/music.html
@@ -375,6 +375,7 @@
    </div>
    
 <script src="music.js" charset="utf-8"></script>
+<script src="popWindow.js" charset="utf-8"></script>
     
 </body>
 </html>
