--- a/reconstruction.html
+++ b/reconstruction.html
@@ -316,6 +316,7 @@
    </div>
    
 <script src="reconstruction.js" charset="utf-8"></script>
+<script src="popWindow.js" charset="utf-8"></script>
     
 </body>
 </html>
