Modify above questions and answers

--- a/reconstruction.html
+++ b/reconstruction.html
@@ -20,10 +20,13 @@
    <div id = "div2">
 
         <div class = "div2Height">
-            <h2 class = "f1 c3a div1Margin2 div2Align">Questions</h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align"></h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align">Question</h2>
+            <h2 class = "f1 c3a div1Margin2 div2Align">Answer</h2>
         </div>
-        <div class = "div2Height">
-            <h2 class = "f1 c3a div1Margin2 div2Align">Answers</h2>
+
+        <div class = "div3Height">
+            <h2 class = "f1 c3a div1Margin2 div2Align">Answer Options</h2>
         </div>
 
 
